--- a/source/less/components/wizard.less
+++ b/source/less/components/wizard.less
@@ -118,6 +118,7 @@
     }
 
     section {
+        position: relative;
         display: none;
     }
 
